# FPT-Policy-GraphRAG

./: .dockerignore  .env.example  .gitignore  claude.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_graphdb.ipynb  test_queries.ipynb  test_script.py
.github/workflows/: ci-cd.yml  clear-redis-cache.yml
app/: main.py
app/api/: router.py
app/api/routes/: auth.py  conversation.py  message.py
app/core/: auth.py  config.py  database.py  redis_client.py
app/db/: models.py  session.py
app/schemas/: auth.py  conversation.py
app/services/: ai_service.py  cache_service.py  conversation_service.py  reranker.py  user_service.py
app/services/config/: SYSTEM-PROMPT.md
app/services/nodes/: generator.py  retrieval.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/superpowers/specs/: 2026-03-31-system-prompt-optimization.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/Auth/: LoginPage.module.css  LoginPage.tsx
frontend/src/components/Chat/: ChatArea.module.css  ChatArea.tsx  MessageBubble.module.css  MessageBubble.tsx  WelcomeScreen.module.css  (+1 more)
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
src/core/: graph.py  state.py
src/ingestion/: pipeline.py
src/nodes/: generator.py  retrieval.py
src/services/: embeddings.py  llm.py
src/storage/: graph_db.py  vector_db.py
tests/: conftest.py  test_auth.py  test_chat.py  test_retrieval.py  test_system_prompt.py
(+6 files in other folders)
